package test;
message client_request_msg
{
	optional string name = 1;
	optional uint32 id = 2;
}