package gate;
message login_msg
{
	optional uint64 id = 1;
}